--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,19 @@
 services:
+  litellm-db:
+    image: postgres:16-alpine
+    container_name: litellm-db
+    environment:
+      POSTGRES_USER: litellm_user
+      POSTGRES_PASSWORD: ${POSTGRE_PASSWORD}
+      POSTGRES_DB: litellm_db
+    volumes:
+      - litellm_db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U litellm_user -d litellm_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   litellm:
     image: ghcr.io/berriai/litellm:main-latest
     container_name: litellm-proxy
@@ -8,16 +23,18 @@ services:
       - AWS_REGION_NAME=us-east-1
       - LITELLM_MODE=PROXY
       - LITELLM_MASTER_KEY=sk-test-1234567890
+      - DATABASE_URL=postgresql://litellm_user:${POSTGRE_PASSWORD}@litellm-db:5432/litellm_db
+      - AWS_BEARER_TOKEN_BEDROCK=${AWS_BEARER_TOKEN_BEDROCK}
     volumes:
       - ~/.aws:/root/.aws:ro
       - ./litellm-config.yaml:/app/config.yaml:ro
     command: ["--config", "/app/config.yaml", "--port", "4000", "--host", "0.0.0.0"]
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 20s
+      test: ["CMD-SHELL","wget","--quiet","--tries=1","http://localhost:4000/health/liveliness"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
 
   openwebui:
     image: ghcr.io/open-webui/open-webui:latest
@@ -36,8 +53,7 @@ services:
     volumes:
       - open-webui-data:/app/backend/data
     depends_on:
-      litellm:
-        condition: service_healthy
+      - litellm
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
       interval: 30s
@@ -47,3 +63,4 @@ services:
 
 volumes:
   open-webui-data:
+  litellm_db_data:
